<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="20dp"
    app:cardCornerRadius="20dp"
    android:padding="4dp"
    android:layout_margin="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:id="@+id/add_image_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_image"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="31dp"
            android:textColor="@color/xd_dark_burgundy"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <ImageView
            android:id="@+id/image_add"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/add_image"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@+id/add_image_txt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:layout_marginStart="50dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/image_add"
            app:layout_constraintStart_toStartOf="@+id/image_add"
            />


        <Button
            android:id="@+id/confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/image_add"
            app:layout_constraintEnd_toEndOf="@+id/image_add"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>